; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bsnmp/lib/extr_asn1.c_asn_put_ipaddress.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bsnmp/lib/extr_asn1.c_asn_put_ipaddress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.asn_buf = type { i32, i32 }

@ASN_CLASS_APPLICATION = common dso_local global i32 0, align 4
@ASN_APP_IPADDRESS = common dso_local global i32 0, align 4
@ASN_ERR_OK = common dso_local global i32 0, align 4
@ASN_ERR_EOBUF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @asn_put_ipaddress(%struct.asn_buf* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.asn_buf*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.asn_buf* %0, %struct.asn_buf** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.asn_buf*, %struct.asn_buf** %4, align 8
  %8 = load i32, i32* @ASN_CLASS_APPLICATION, align 4
  %9 = load i32, i32* @ASN_APP_IPADDRESS, align 4
  %10 = or i32 %8, %9
  %11 = call i32 @asn_put_header(%struct.asn_buf* %7, i32 %10, i32 4)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* @ASN_ERR_OK, align 4
  %13 = icmp ne i32 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* %6, align 4
  store i32 %15, i32* %3, align 4
  br label %38

16:                                               ; preds = %2
  %17 = load %struct.asn_buf*, %struct.asn_buf** %4, align 8
  %18 = getelementptr inbounds %struct.asn_buf, %struct.asn_buf* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = icmp slt i32 %19, 4
  br i1 %20, label %21, label %23

21:                                               ; preds = %16
  %22 = load i32, i32* @ASN_ERR_EOBUF, align 4
  store i32 %22, i32* %3, align 4
  br label %38

23:                                               ; preds = %16
  %24 = load %struct.asn_buf*, %struct.asn_buf** %4, align 8
  %25 = getelementptr inbounds %struct.asn_buf, %struct.asn_buf* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load i32*, i32** %5, align 8
  %28 = call i32 @memcpy(i32 %26, i32* %27, i32 4)
  %29 = load %struct.asn_buf*, %struct.asn_buf** %4, align 8
  %30 = getelementptr inbounds %struct.asn_buf, %struct.asn_buf* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = add nsw i32 %31, 4
  store i32 %32, i32* %30, align 4
  %33 = load %struct.asn_buf*, %struct.asn_buf** %4, align 8
  %34 = getelementptr inbounds %struct.asn_buf, %struct.asn_buf* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = sub nsw i32 %35, 4
  store i32 %36, i32* %34, align 4
  %37 = load i32, i32* @ASN_ERR_OK, align 4
  store i32 %37, i32* %3, align 4
  br label %38

38:                                               ; preds = %23, %21, %14
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i32 @asn_put_header(%struct.asn_buf*, i32, i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
